--- a/index.html
+++ b/index.html
@@ -177,10 +177,10 @@
               </div>      
                   <ul id="technicalskills">
                     <li><b>Programming:</b> Python, C/C++, MATLAB, Assembly, Microcontroller Programming</li>
-                    <li><b>Data Science:</b> TensorFlow, Keras, Scikit-Learn, NLTK, Streamlit, Pandas, NumPy, Matplotlib, Seaborn, Plotly </li>
+                    <li><b>Data Science:</b> TensorFlow, Keras, Scikit-Learn, NLTK, Streamlit, Pandas, NumPy, Matplotlib, Seaborn, Plotly, OpenCV </li>
                     <li><b>Database:</b> PostgreSQL, SQL</li>
-                    <li><b>Web Scraping:</b> Requests, Beautiful Soup, Snscrape, yfinance</li>
-                    <li><b>Environments/Technologies:</b> Git, Git LFS, PyPI, Linux/Unix, Google Colab, Kaggle Notebooks </li>
+                    <li><b>Web Scraping:</b> Requests, BeautifulSoup, Snscrape, yfinance</li>
+                    <li><b>Environments/Technologies:</b> Git, Git LFS, PyPI, Linux/Unix, Bash, Google Colab, Kaggle Notebooks </li>
                     <li><b>Embedded Systems:</b> Arduino, 8051 Microcontroller, Raspberry Pi, Proteus, PSpice, PCB Designing</li>
                   </ul>
           </div>
