--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                 </div>
                         </h1>
 
-                        <p> A dedicated professional specializing in Data Science, Machine Learning, Deep Learning, Computer Vision (CV), and Natural Language Processing (NLP), possesses a robust background covering both academic and industry, with over 5+ years of experience!
+                        <p> A dedicated professional specializing in Data Science, Machine Learning, Deep Learning, Computer Vision (CV), and Natural Language Processing (NLP), possesses a robust background covering both academic and industry settings, with over 5+ years of experience!
                           <br><br>Being an Open-Sourcerer, I also publish impactful packages for Python's open-source community. I also write about social issues and technical tutorials on my <a href="https://theumairakram.medium.com/" target="_blank">blog</a> on Medium.
                           </p> 
                         <div class="custom-btn-group mt-4">
