image paths corrected

--- a/projects/stroke-prediction/index.html
+++ b/projects/stroke-prediction/index.html
@@ -67,7 +67,7 @@
           </h5>
           <div class="row">
             <p class="center">
-              <img class="img" src="projects/stroke-prediction/stroke.png" width="80%">
+              <img class="img" src="stroke.png" width="80%">
             </p>
           </div>
           <div class="col s2 m2 l2"></div>
@@ -89,7 +89,7 @@
                 Stroke, characterized by the sudden loss of brain function due to an interruption in blood supply, poses significant health challenges globally. Timely identification of individuals at elevated risk enables the implementation of preventive strategies, thereby mitigating adverse outcomes. In recent years, machine learning techniques have been increasingly employed to enhance predictive accuracy in medical diagnoses. This project focuses on developing an accurate machine learning model for predicting stroke risk. It offers practical implementation of the model, aiding researchers, data scientists, and enthusiasts in understanding data preprocessing, feature engineering, model training, and evaluation.
                 <br><br>
                 <p class="center">
-                  <img class="teaser" src="projects/stroke-prediction/Brain.webp" width="80%">
+                  <img class="teaser" src="Brain.webp" width="80%">
                 </p>
               </h6>
             </div>
@@ -101,7 +101,7 @@
                 The project involves data analysis and preprocessing, exploratory data analysis (EDA), feature engineering, model building, and evaluation. Various machine learning models such as Decision Tree, Random Forest, and XGBoost are implemented and compared to identify the most effective model for stroke prediction.
                 <br><br>
                 <p class="center">
-                  <img class="methodology" src="projects/stroke-prediction/Stroke Distribution Based on Bmi and Glucose Level (1).png" width="50%">
+                  <img class="methodology" src="Stroke Distribution Based on Bmi and Glucose Level (1).png" width="50%">
                 </p>
               </h6>
             </div>
